@@ -104,6 +104,7 @@
             "rct2ww.scenery_small.sbwind03",
             "$DAT:0CBD0601|IRWSR03C",
             "rct2ww.scenery_small.sbwind04",
+            "fidwell.scenery_small.sbwind04",
             "rct2ww.scenery_small.sbwind05",
             "$DAT:0CBD0601|IRWSR04C",
             "rct2ww.scenery_small.sbwind06",
