@@ -1,0 +1,48 @@
+{
+    "id": "fidwell.scenery_small.sbwind04",
+    "authors": ["Frontier Studios"],
+    "version": "1.0",
+    "sourceGame": "custom",
+    "objectType": "scenery_small",
+    "properties": {
+        "price": 20,
+        "removalPrice": -15,
+        "cursor": "CURSOR_HOUSE_DOWN",
+        "height": 30,
+        "shape": "4/4",
+        "SMALL_SCENERY_FLAG_VOFFSET_CENTRE": true,
+        "requiresFlatSurface": true,
+        "isRotatable": true,
+        "isStackable": true,
+        "prohibitWalls": true,
+        "hasNoSupports": true,
+        "hasPrimaryColour": true
+    },
+    "images": [
+      { "path": "images/0.png", "x": -32, "y": -20 },
+      { "path": "images/1.png", "x": -32, "y": -34 },
+      { "path": "images/2.png", "x": -32, "y": -26 },
+      { "path": "images/3.png", "x": -1, "y": -34 }
+    ],
+    "strings": {
+        "name": {
+            "en-GB": "Wind Sculpted Convex Wall Corner",
+            "fr-FR": "Coin de mur convexe façonné par le vent",
+            "de-DE": "Erosionsfelsenwand - Konvexe Ecke",
+            "es-ES": "Esquina de pared convexa esculpida por el viento",
+            "it-IT": "Angolo di muro convesso eroso dal vento",
+            "nl-NL": "Door wind gevormde Convexe Hoek Muur",
+            "sv-SE": "Vindformat konvext vägghörn",
+            "zh-CN": "风蚀造形凸面的墙转角",
+            "cs-CZ": "Konvexní roh větrem ošlehané stěny",
+            "ko-KR": "풍화된 볼록한 벽 구석",
+            "pl-PL": "Zerodowany narożnik wypukłej ściany",
+            "ru-RU": "Деталь стены",
+            "pt-BR": "Canto Convexo de Parede Esculpida Pelo Vento",
+            "ja-JP": "風で削られた 凸片な壁部分",
+            "eo-ZZ": "Vento-Skulptita Konveksa Murangulo",
+            "ca-ES": "Cantonada convexa de mur esculpit pel vent",
+            "fi-FI": "Tuulen muokkaaman seinän kupera kulma"
+        }
+    }
+}
