@@ -1,6 +1,7 @@
 4.0
 ------------------------------------------------------------------------
 - Major fix: Issues with tree and garden overrides that caused graphical glitching.
+- New object: Wind Sculpted Convex Wall Corner (fidwell.scenery_small.sbwind04)
 - Fixed object: Roman Colosseum (fidwell.scenery_large.scol)
 - Fixed object: Volcano (fidwell.scenery_large.svlc)
 - Fixed object: Chinese Cedar Tree (fidwell.scenery_small.tcc)
